# notebooklm-automated

./: .gitignore  README.md  pyproject.toml
data/: concepts.csv
prompts/: 00_orienting_introduction.txt  01_why_it_matters.txt  02_overall_significance.txt  03_identity_and_function.txt  04_example.txt  05_dynamics_and_formal_structure.txt  06_technical_core.txt  07_memory_lock.txt  07_non-examples.txt  08_concept_boundaries.txt  08_non-examples.txt  09_concept_boundaries.txt  09_memory_lock.txt
prompts/CSci 372 - Final Preparation/: 00_orienting_introduction.txt  01_why_it_matters.txt  02_overall_significance.txt  03_identity_and_function.txt  05_dynamics_and_formal_structure.txt  07_non-examples.txt  09_memory_lock.txt
prompts/The Hidden Grammar of Reality/: 00_where_am_i.txt  01_orienting_introduction.txt  02_why_it_matters.txt  03_overall_significance.txt  04_identity_and_function.txt  05_example.txt  06_dynamics_and_formal_structure.txt  07_technical_core.txt  08_non-examples.txt  09_concept_boundaries.txt  10_memory_lock.txt
prompts/backups/: 00_orienting_introduction.txt  04_example.txt  05_dynamics_and_formal_structure.txt  06_technical_core.txt  07_memory_lock.txt  08_non-examples.txt
prompts/default/: 04_example.txt
scripts/: build_study_hub.py  list_notebooks.py  list_sources.py
src/notebooklm_automation/: __init__.py  build_study_hub.py  cli.py  config.py  launcher.py  models.py  notebooklm_service.py  runner.py  source_config.py  storage.py  template_loader.py  tutor_server.py
tests/: test_config.py  test_template_loader.py
